--- a/kiarah.littlexavier/index.html
+++ b/kiarah.littlexavier/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-ng-app="app">
 <head>
     <meta charset="UTF-8" />
     <title>SmartBlog</title>
@@ -35,12 +35,13 @@
     <link rel="apple-touch-icon-precomposed" href="/images/apple-touch-icon-57-precomposed.png">
     <link rel="shortcut icon" href="/images/favicon.png">
 
-    <script type="text/javascript" src="/Scripts/jquery-bundle.min.js"></script>
-    <script type="text/javascript" src="/Scripts/bootstrap-bundle.min.js"></script>
-    <script type="text/javascript" src="/Scripts/modernizer-min.js"></script>
+    <script src="/Scripts/jquery-bundle.min.js"></script>
+    <script src="/Scripts/bootstrap-bundle.min.js"></script>
+    <script src="/Scripts/modernizer-min.js"></script>
+    <script src="Scripts/angular-bundle.min.js"></script>
     <!-- Extras -->
 </head>
-<body id="page">
+<body id="page" data-ng-controller="indexController">
 
     <div class="container">
         <div class="row clearfix">
@@ -215,5 +216,12 @@
         </div>
     </div>
     <!-- Deffered scripts -->
+    <!-- Angular -->
+    <!-- App -->
+    <script src="app/app.js"></script>
+    <!-- Services -->
+    <script src="app/services/dataService.js"></script>
+    <!-- Controllers -->
+    <script src="app/index/indexController.js"></script>
 </body>
 </html>
