- Added my castle feature.

--- a/kiarah.littlexavier/index.html
+++ b/kiarah.littlexavier/index.html
@@ -71,7 +71,7 @@
                                 <a href="#">My Journey</a>
                             </li>
                             <li>
-                                <a href="#">My Castle</a>
+                                <a href="#/my-castle">My Castle</a>
                             </li>
                             <li>
                                 <a href="#">My Pics</a>
