--- a/kiarah.littlexavier/index.html
+++ b/kiarah.littlexavier/index.html
@@ -65,7 +65,7 @@
                                 <a href="#">All About Me</a>
                             </li>
                             <li>
-                                <a href="#">My Family</a>
+                                <a href="#/my-families" data-ng-click="vm.setShowCarousel(false)">My Family</a>
                             </li>
                             <li>
                                 <a href="#/my-journey" data-ng-click="vm.setShowCarousel(false)">My Journey</a>
